--- a/array_and_hash/array_and_hash/array_and_hash.vcxproj
+++ b/array_and_hash/array_and_hash/array_and_hash.vcxproj
@@ -147,6 +147,7 @@
     <ClInclude Include="_0036_valid_sudoku.h" />
     <ClInclude Include="_0049_group_anagrams.h" />
     <ClInclude Include="_0058_length_of_last_word.h" />
+    <ClInclude Include="_0118_pascals_triangle.h" />
     <ClInclude Include="_0128_longest_consecutive_sequence.h" />
     <ClInclude Include="_0217_contains_duplicate.h" />
     <ClInclude Include="_0238_product_of_array_except_self.h" />
