--- a/array_and_hash/array_and_hash/array_and_hash.vcxproj
+++ b/array_and_hash/array_and_hash/array_and_hash.vcxproj
@@ -144,6 +144,7 @@
   <ItemGroup>
     <ClInclude Include="_0001_two_sum.h" />
     <ClInclude Include="_0014_longest_common_prefix.h" />
+    <ClInclude Include="_0027_remove_element.h" />
     <ClInclude Include="_0036_valid_sudoku.h" />
     <ClInclude Include="_0049_group_anagrams.h" />
     <ClInclude Include="_0058_length_of_last_word.h" />
