--- a/trees/trees/trees.vcxproj
+++ b/trees/trees/trees.vcxproj
@@ -42,7 +42,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v142</PlatformToolset>
+    <PlatformToolset>v143</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
@@ -139,6 +139,7 @@
     <ClInclude Include="_0226_invert_binary_tree.h" />
     <ClInclude Include="_0230_kth_smallest_element_in_a_bst.h" />
     <ClInclude Include="_0235_lowest_common_ancestor_of_a_binary_search_tree.h" />
+    <ClInclude Include="_0501_find_mode_in_binary_search_tree.h" />
     <ClInclude Include="_0543_diameter_of_binary_tree.h" />
     <ClInclude Include="_0110_balanced_binary_tree.h" />
     <ClInclude Include="_0572_subtree_of_another_tree.h" />
