--- a/trees/trees/trees.vcxproj
+++ b/trees/trees/trees.vcxproj
@@ -145,6 +145,7 @@
     <ClInclude Include="_0572_subtree_of_another_tree.h" />
     <ClInclude Include="_0105_construct_binary_tree_from_preorder_and_inorder_traversal.h" />
     <ClInclude Include="_1448_count_good_nodes_in_binary_tree.h" />
+    <ClInclude Include="_2265_count_nodes_equal_to_average_of_subtree.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
