Update daily challenge.

--- a/heap_priority_queue/heap_priority_queue/heap_priority_queue.vcxproj
+++ b/heap_priority_queue/heap_priority_queue/heap_priority_queue.vcxproj
@@ -138,6 +138,7 @@
     <ClInclude Include="_0973_k_closest_points_to_origin.h" />
     <ClInclude Include="_1046_last_stone_weight.h" />
     <ClInclude Include="_1845_seat_reservation_manager.h" />
+    <ClInclude Include="_1921_eliminate_maximum_number_of_monsters.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
