--- a/array_and_hash/array_and_hash/array_and_hash.vcxproj
+++ b/array_and_hash/array_and_hash/array_and_hash.vcxproj
@@ -145,6 +145,7 @@
     <ClInclude Include="_1160_find_words_that_can_be_formed_by_characters.h" />
     <ClInclude Include="_1685_sum_of_absolute_differences_in_a_sorted_array.h" />
     <ClInclude Include="_1814_count_nice_pairs_in_an_array.h" />
+    <ClInclude Include="_1903_largest_odd_number_in_string.h" />
     <ClInclude Include="_1930_unique_length_3_palindromic_subsequences.h" />
     <ClInclude Include="_1980_find_unique_binary_string.h" />
     <ClInclude Include="_2785_sort_vowels_in_a_string.h" />
