--- a/2-d_dynamic_programming/2-d_dynamic_programming/2-d_dynamic_programming.vcxproj
+++ b/2-d_dynamic_programming/2-d_dynamic_programming/2-d_dynamic_programming.vcxproj
@@ -132,6 +132,7 @@
   <ItemGroup>
     <ClInclude Include="_0062_unique_paths.h" />
     <ClInclude Include="_0309_best_time_to_buy_and_sell_stock_with_cooldown.h" />
+    <ClInclude Include="_0446_arithmetic_slices_ii_subsequence.h" />
     <ClInclude Include="_1143_longest_common_subsequence.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
