--- a/trees/trees/trees.vcxproj
+++ b/trees/trees/trees.vcxproj
@@ -146,6 +146,8 @@
     <ClInclude Include="_0105_construct_binary_tree_from_preorder_and_inorder_traversal.h" />
     <ClInclude Include="_1448_count_good_nodes_in_binary_tree.h" />
     <ClInclude Include="_2265_count_nodes_equal_to_average_of_subtree.h" />
+    <ClInclude Include="_2385_amount_of_time_for_binary_tree_to_be_infected_bfs.h" />
+    <ClInclude Include="_2385_amount_of_time_for_binary_tree_to_be_infected_dfs.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
