--- a/basic/basic/basic.vcxproj
+++ b/basic/basic/basic.vcxproj
@@ -133,6 +133,7 @@
     <ClInclude Include="basic_queue.h" />
     <ClInclude Include="basic_str.h" />
     <ClInclude Include="basic_unordered_map.h" />
+    <ClInclude Include="basic_unordered_set.h" />
     <ClInclude Include="basic_vector.h" />
     <ClInclude Include="basic_check.h" />
   </ItemGroup>
