--- a/basic/basic/basic.vcxproj
+++ b/basic/basic/basic.vcxproj
@@ -132,7 +132,7 @@
   <ItemGroup>
     <ClInclude Include="basic_queue.h" />
     <ClInclude Include="basic_stack.h" />
-    <ClInclude Include="basic_str.h" />
+    <ClInclude Include="basic_string.h" />
     <ClInclude Include="basic_unordered_map.h" />
     <ClInclude Include="basic_unordered_set.h" />
     <ClInclude Include="basic_vector.h" />
