--- a/array_and_hash/array_and_hash/array_and_hash.vcxproj
+++ b/array_and_hash/array_and_hash/array_and_hash.vcxproj
@@ -144,6 +144,7 @@
   <ItemGroup>
     <ClInclude Include="_1074_number_of_submatrices_that_sum_to_targe.h" />
     <ClInclude Include="_1160_find_words_that_can_be_formed_by_characters.h" />
+    <ClInclude Include="_1481_least_number_of_unique_integers_after_k_removals.h" />
     <ClInclude Include="_1685_sum_of_absolute_differences_in_a_sorted_array.h" />
     <ClInclude Include="_1814_count_nice_pairs_in_an_array.h" />
     <ClInclude Include="_1903_largest_odd_number_in_string.h" />
