--- a/heap_priority_queue/heap_priority_queue/heap_priority_queue.vcxproj
+++ b/heap_priority_queue/heap_priority_queue/heap_priority_queue.vcxproj
@@ -137,6 +137,7 @@
     <ClInclude Include="_0703_kth_largest_element_in_a_stream.h" />
     <ClInclude Include="_0973_k_closest_points_to_origin.h" />
     <ClInclude Include="_1046_last_stone_weight.h" />
+    <ClInclude Include="_1642_furthest_building_you_can_reach.h" />
     <ClInclude Include="_1845_seat_reservation_manager.h" />
     <ClInclude Include="_1921_eliminate_maximum_number_of_monsters.h" />
   </ItemGroup>
