--- a/basic/basic/basic.vcxproj
+++ b/basic/basic/basic.vcxproj
@@ -131,6 +131,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="basic_algorithm.h" />
+    <ClInclude Include="basic_bitwise.h" />
     <ClInclude Include="basic_queue.h" />
     <ClInclude Include="basic_stack.h" />
     <ClInclude Include="basic_string.h" />
