--- a/bit_manipulation/bit_manipulation/bit_manipulation.vcxproj
+++ b/bit_manipulation/bit_manipulation/bit_manipulation.vcxproj
@@ -135,6 +135,7 @@
     <ClInclude Include="_0136_single_number.h" />
     <ClInclude Include="_0190_reverse_bits.h" />
     <ClInclude Include="_0191_number_of_1_bits.h" />
+    <ClInclude Include="_0201_bitwise_and_of_numbers_range.h" />
     <ClInclude Include="_0268_missing_number.h" />
     <ClInclude Include="_0338_counting_bits.h" />
     <ClInclude Include="_0371_sum_of_two_integers.h" />
