--- a/array_and_hash/array_and_hash/array_and_hash.vcxproj
+++ b/array_and_hash/array_and_hash/array_and_hash.vcxproj
@@ -174,6 +174,7 @@
     <ClInclude Include="_2864_maximum_odd_binary_number.h" />
     <ClInclude Include="_3076_shortest_uncommon_substring_in_an_array.h" />
     <ClInclude Include="_0791_custom_sort_string.h" />
+    <ClInclude Include="_3090_maximum_length_substring_with_two_occurrences.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
