--- a/array_and_hash/array_and_hash/array_and_hash.vcxproj
+++ b/array_and_hash/array_and_hash/array_and_hash.vcxproj
@@ -144,7 +144,9 @@
   <ItemGroup>
     <ClInclude Include="utils.h" />
     <ClInclude Include="_0442_find_all_duplicates_in_an_array.h" />
-    <ClInclude Include="_0912_sort_an_array.h" />
+    <ClInclude Include="_0912_sort_an_array_insertion_sort.h" />
+    <ClInclude Include="_0912_sort_an_array_merge_sort.h" />
+    <ClInclude Include="_0912_sort_an_array_quick_sort.h" />
     <ClInclude Include="_1074_number_of_submatrices_that_sum_to_targe.h" />
     <ClInclude Include="_1160_find_words_that_can_be_formed_by_characters.h" />
     <ClInclude Include="_1481_least_number_of_unique_integers_after_k_removals.h" />
