--- a/backtracking/backtracking/backtracking.vcxproj
+++ b/backtracking/backtracking/backtracking.vcxproj
@@ -130,10 +130,12 @@
     <ClCompile Include="backtracking.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="utils.h" />
     <ClInclude Include="_0017_letter_combinations_of_a_phone_number.h" />
     <ClInclude Include="_0039_combination_sum.h" />
     <ClInclude Include="_0040_combination_sum_ii.h" />
     <ClInclude Include="_0046_permutations.h" />
+    <ClInclude Include="_0047_permutations_ii.h" />
     <ClInclude Include="_0051_n_queens.h" />
     <ClInclude Include="_0078_subsets.h" />
     <ClInclude Include="_0079_word_search.h" />
