--- a/backtracking/backtracking/backtracking.vcxproj
+++ b/backtracking/backtracking/backtracking.vcxproj
@@ -140,6 +140,8 @@
     <ClInclude Include="0079\_0079_word_search.h" />
     <ClInclude Include="0090\_0090_subsets_ii.h" />
     <ClInclude Include="0131\_0131_palindrome_partitioning.h" />
+    <ClInclude Include="0139\_0139_word_break.h" />
+    <ClInclude Include="0140\_0140_word_break_ii.h" />
     <ClInclude Include="1239\_1239_maximum_length_of_concatenated_string_with_unique_characters.h" />
     <ClInclude Include="utils.h" />
   </ItemGroup>
