--- a/trees/trees/trees.vcxproj
+++ b/trees/trees/trees.vcxproj
@@ -131,6 +131,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="define.h" />
+    <ClInclude Include="utils.h" />
+    <ClInclude Include="_0095_unique_binary_search_trees_ii.h" />
     <ClInclude Include="_0098_validate_binary_search_tree.h" />
     <ClInclude Include="_0100_same_tree.h" />
     <ClInclude Include="_0102_binary_tree_level_order_traversal.h" />
